# orakle-coding-assignment-2024

./: .algokit.toml  .copier-answers.yml  README.md  orakle-nft-marketplace-app.code-workspace
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: orakle-nft-marketplace-app-contracts-cd.yaml  orakle-nft-marketplace-app-contracts-ci.yaml  orakle-nft-marketplace-app-frontend-cd.yaml  orakle-nft-marketplace-app-frontend-ci.yaml  release.yaml  validate.yaml
projects/code-demo/: .algokit.toml  .copier-answers.yml  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
projects/code-demo/smart_contracts/artifacts/personal_bank/: PersonalBank.approval.teal  PersonalBank.arc32.json  PersonalBank.clear.teal
projects/code-demo/smart_contracts/personal_bank/: contract.py  deploy-config.ts
projects/orakle-nft-marketplace-app-contracts/: .algokit.toml  .copier-answers.yml  README.md  package-lock.json  package.json  pyproject.toml
projects/orakle-nft-marketplace-app-contracts/smart_contracts/: README.md
projects/orakle-nft-marketplace-app-contracts/smart_contracts/nft_marketplace/: contract.py  deploy-config.ts
projects/orakle-nft-marketplace-app-contracts/tests/: nft-marketplace.spec.ts
projects/orakle-nft-marketplace-app-frontend/: .algokit.toml  .copier-answers.yml  .env.template  README.md  index.html  package-lock.json  package.json  tailwind.config.js
projects/orakle-nft-marketplace-app-frontend/public/: index.html
projects/orakle-nft-marketplace-app-frontend/src/: App.tsx  Home.tsx  atoms.ts  main.tsx  methods.ts
(+30 files in other folders)
